# appnotasv2

appnotas-v2/: README.md  package.json  vitest.config.ts
appnotas-v2/bundle/: AppNotas-0.1.0-1.x86_64.rpm
appnotas-v2/scripts/: package.js
appnotas-v2/src-tauri/: .settings.json  Cargo.toml  tauri.conf.json
appnotas-v2/src-tauri/capabilities/: default.json
appnotas-v2/src-tauri/src/: lib.rs
appnotas-v2/src-tauri/src/commands/: files.rs  mod.rs  notes.rs
appnotas-v2/src/lib/components/: AIPalette.svelte  CodeInsertDialog.svelte  CommandPalette.svelte  FileEditor.svelte  FileTree.svelte  NoteEditor.svelte  NotesList.svelte  PDFView.svelte  SettingsPanel.svelte  Sidebar.svelte  TipTapEditor.svelte
appnotas-v2/src/lib/services/: geminiService.ts
appnotas-v2/src/lib/stores/: files.ts  focus.ts  notes.ts  settings.ts  shortcuts.ts
appnotas-v2/src/lib/tiptap/: TipTapEditor.css
appnotas-v2/src/lib/utils/: codemirror-decorations.ts  files.ts  markdown.ts  rich-note-decorations.ts
appnotas-v2/src/routes/: +page.svelte
appnotas-v2/tests/: files.test.ts  notes.test.ts
desktop/: package-lock.json  package.json  test-features.js  test-package.json  vitest.config.js
desktop/src/: file_browser_styles.css  index.html  main.js  markdown.css  style.css
desktop/src-tauri/: Cargo.toml  app_notas.db  build_errors.txt  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: app.toml
desktop/src-tauri/src/: db.rs  fs_browser.rs  gemini.rs  lib.rs
desktop/src/__tests__/: file-browser.test.js  setup.js
(+11 files in other folders)
